// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h4>
    Viewing 
    1
     
    expense
     totalling
     
    $0.00
  </h4>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h4>
    Viewing 
    23
     
    expenses
     totalling
     
    $0.00
  </h4>
</div>
`;
